--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         <div class="header">
             <h1>📸 Instagram Viewer</h1>
             <p>View profile info, posts, stories & reels</p>
-            <p style="font-size: 0.9rem; margin-top: 10px; opacity: 0.8;">Created by Anuj Gupta</p>
+            <p style="font-size: 0.9rem; margin-top: 10px; opacity: 0.8;">Created by ❤️ Anish Gupta</p>
         </div>
 
         <div class="search-box">
